--- a/.env
+++ b/.env
@@ -1,4 +1,5 @@
 SECRET_KEY=j88o8mgwff$$dx+^+lsh-6y3g%@&y#wppq0j8lyt2gqxn2tk$6
 SAMBA_SERVER_IP=192.168.1.4
+SAMBA_SERVER_PORT=22
 SAMBA_ADMIN_USER=systemaccess
 SAMBA_ADMIN_PASSWORD=systemaccess123!@#
