--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,14 @@
+asn1crypto==0.24.0
+bcrypt==3.1.4
+cffi==1.11.5
+cryptography==2.1.4
 Django==2.0.3
+django-bootstrap4==0.0.6
+idna==2.6
+paramiko==2.4.1
+pyasn1==0.4.2
+pycparser==2.18
+PyNaCl==1.2.1
 python-decouple==3.1
 pytz==2018.3
+six==1.11.0
